from django.db import models

# Create your models here.


class Quiz(models.Models):
    id = models.AutoField(primary_key=True)
    name = models.CharField(max_length=255)
    intro = models.TextField()
    grade = models.DecimalField()
    is_comp = models.BooleanField(default=False)
    visible = models.BooleanField(default=False)
    open_time_date = models.DateTimeField()
    close_time_date = models.DateTimeField()
    timelimit = models.IntegerField(max=300)


class QuizSlots(models.Model):
    STATUS_CHOICES = (
        ('processing', 'Processing'),
        ('submitted', 'Submitted'),
    )

    id = models.AutoField(primary_key=True)
    quiz_id = models.ForeignKey(Quiz, on_delete=models.CASCADE)
    question_id = models.ForeignKey('''Question''', on_delete=models.CASCADE)
    slot = models.IntegerField()
    status = models.CharField(choices=STATUS_CHOICES)
    display_number = models.CharField()
    require_previous = models.BooleanField(default=False)
    block = models.IntegerField()
